--- a/lesson5/src/components/ChatList/chat-list.css
+++ b/lesson5/src/components/ChatList/chat-list.css
@@ -1,11 +1,27 @@
 .chat-list {
-    float: left;
-    width: 31%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     border-right: 2px solid #E9EBED;
-    padding-bottom: 10px;
+    width: 30%;
+    overflow-y: auto;
+}
+
+.chat-list a {
+    color: black;
+    text-decoration: none;
 }
 
 .chat-list__list {
+    display: flex;
     height: 35px;
-    ;
+    padding-left: 10px;
+}
+
+.chat-name {
+    display: flex;
+    margin-left: 10px;
+    align-items: center;
+    justify-content: center;
+    font-weight: 400;
 }
