--- a/lesson5/src/components/Profile/profile.css
+++ b/lesson5/src/components/Profile/profile.css
@@ -1,7 +1,16 @@
-.profile {
+.profile1 {
+    display: flex;
+    background-color: #fff;
     max-width: 1010px;
+    min-width: 1010px;
+    min-height: 555px;
     margin: 0 auto;
-    height: 70px;
+    box-shadow: 0px 1px 0 #dfe5ec;
+    border-radius: 0 0 3px 3px;
+    border-left: 1px solid #dfe5ec;
+    border-right: 1px solid #dfe5ec;
+    border-bottom: 1px solid #d2dbe3;
+    overflow: hidden;
 }
 
 .profile-avatar {}
