chat-delete-fix

--- a/lesson6/src/components/ChatList/chat-list.css
+++ b/lesson6/src/components/ChatList/chat-list.css
@@ -37,3 +37,11 @@
 .button-chat {
     display: flex;
 }
+
+.button-chat:hover .remove-chat {
+    display: block;
+}
+
+.remove-chat {
+    display: none;
+}
